overflow fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1861,6 +1861,7 @@ a:hover {
     flex: 1;
     height: 100%;
     max-height: calc(100vh - 200px);
+    overflow: auto;
 }
 
 .options__content--background {
